--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.*
@@ -9,39 +9,256 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Testing
+/coverage
+*.lcov
+.nyc_output
 
-# vercel
+# Next.js
+/.next/
+/out/
+.next
+
+# Production builds
+/build
+/dist
+
+# Environment variables
+.env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vercel
 .vercel
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
+.tscache
 
+# Prisma (Database)
 /src/generated/prisma
+prisma/migrations/*
+!prisma/migrations/migration_lock.toml
 
+# Image processing and uploads
+/public/uploads/
+/public/temp/
+/uploads/
+/temp/
+*.tmp
+*.temp
 
-#Ignore vscode AI rules
+# AI/ML model files and data
+/models/
+/data/
+/datasets/
+*.pkl
+*.joblib
+*.h5
+*.pb
+*.onnx
+*.tflite
+*.pt
+*.pth
+*.safetensors
+
+# Image processing cache
+/public/optimized/
+/public/cache/
+/.image-cache/
+/image-cache/
+
+# Logs
+logs
+*.log
+.pnpm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# Operating System Files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Ignore vscode AI rules and instructions
 .github/instructions/codacy.instructions.md
+.github/instructions/
+.cursor-tutor/
+
+# Claude/AI assistant files
+.claude/
+*.claude
+.ai-instructions/
+
+# Local database files
+*.sqlite
+*.sqlite3
+*.db
+
+# Backup files
+*.backup
+*.bak
+*.orig
+
+# Certificate files
+*.pem
+*.key
+*.crt
+*.cert
+
+# Temporary files
+tmp/
+temp/
+.tmp/
+.temp/
+
+# Lock files (keep package-lock.json but ignore others)
+yarn.lock
+pnpm-lock.yaml
+
+# Storybook build outputs
+storybook-static/
+
+# Chromatic
+chromatic.log
+
+# Sentry
+.sentryclirc
+
+# Bundle analyzer
+.next-bundle-analyzer/
+
+# Turbo
+.turbo
+
+# Contentlayer
+.contentlayer
+
+# Placeholder and demo content (remove for production)
+/public/demo/
+/content/demo/
+
+# Analytics and tracking files
+.analytics/
+tracking.json
+
+# Performance monitoring
+.performance/
+lighthouse-reports/
+
+# Security scanning results
+.security/
+security-report.json
+
+# API keys and secrets (additional protection)
+secrets.json
+api-keys.json
+credentials.json
+
+# Cache directories
+.cache/
+.parcel-cache/
+.next/cache/
+
+# Build artifacts
+*.tgz
+*.tar.gz
+
+# Sitemap generation
+sitemap*.xml
+robots.txt.backup
+
+# Lighthouse CI
+.lighthouseci/
+
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
+
+# Jest
+coverage/
+jest-cache/
+
+# ESLint cache
+.eslintcache
+
+# Prettier cache
+.prettiercache
+
+# Husky
+.husky/_
