--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
